--- a/blogging-site/package.json
+++ b/blogging-site/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "prettier": "^3.7.4"
+    "prettier": "^3.7.4",
+    "prettier-plugin-ejs": "^1.0.3"
   },
   "dependencies": {
     "ejs": "^3.1.10",
